track_b/b2/deployment2.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: akamai-b2-2
  labels:
    app: stefanprodan
    lab: "podinfo"
spec:
  selector:
    matchLabels:
      app: stefanprodan
      lab: "podinfo"
  replicas: 1
  template:
    metadata:
      labels:
        app: stefanprodan
        lab: "podinfo"
    spec:
      containers:
      - name: podinfo
        image:  stefanprodan/podinfo:latest
        ports:
        - containerPort: 9898
