track_b/b2/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  labels:
    app: backend
    lab: "4.2"
spec:
  type: LoadBalancer
  selector:
    lab: "podinfo"
  ports:
    - port: 80
      protocol: TCP
      targetPort: 9898
