track_b/b2/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: canary-web
spec:
  gatewayClassName: example
  listeners:
  - protocol: HTTP
    port: 80
    name: canary-web-gw
    allowedRoutes:
      namespaces:
        from: Same
