track_b/b2/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: simple-split
spec:
  rules:
  - backendRefs:
    - name: foo-v1
      port: 80
      weight: 90
    - name: foo-v2
      port: 80
      weight: 10
